form validations updated

--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -63,7 +63,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Department Name</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Department">
           <input
             nz-input
             formControlName="department_name"
@@ -78,7 +78,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Ranking</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Rank">
           <input
             nz-input
             formControlName="ranking"
