--- a/Frontend/src/app/modules/inventory-items/components/inventory-items/inventory-items.component.html
+++ b/Frontend/src/app/modules/inventory-items/components/inventory-items/inventory-items.component.html
@@ -65,7 +65,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Item Name</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Item Name">
           <input
             nz-input
             formControlName="item_name"
@@ -80,7 +80,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Quantity</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Quantity">
           <input
             nz-input
             formControlName="quantity"
@@ -95,7 +95,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Price</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Price">
           <input
             nz-input
             formControlName="price"
@@ -110,7 +110,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Tax</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
+        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Tax">
           <input
             nz-input
             formControlName="tax"
