--- a/Frontend/src/app/modules/works/components/works/works.component.html
+++ b/Frontend/src/app/modules/works/components/works/works.component.html
@@ -59,7 +59,7 @@
   <div>
     <nz-form-item>
       <nz-form-label nz-col nzSpan="5">Work Name</nz-form-label>
-      <nz-form-control nz-col nzSpan="10">
+      <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Enter Work Name">
         <input
           nz-input
           formControlName="work_name"
