--- a/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
+++ b/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
@@ -9,14 +9,17 @@
 <nz-content>
   <div class="cbutton">
     <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
-      <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText"/>
+      <input
+        type="text"
+        nz-input
+        placeholder="Search"
+        [(ngModel)]="searchText"
+      />
     </nz-input-group>
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="create()">
-      Create
-    </button>
+    <button nz-button nzType="default" (click)="create()">Create</button>
   </div>
   <nz-table
     #basicTable
@@ -37,8 +40,13 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let data of basicTable.data | globalTablesearch: searchText; let i = index">
-        <td>{{ i+1 }}</td>
+      <tr
+        *ngFor="
+          let data of basicTable.data | globalTablesearch : searchText;
+          let i = index
+        "
+      >
+        <td>{{ i + 1 }}</td>
         <td>{{ data.user_name }}</td>
         <td>{{ data.phone_number }}</td>
         <td>{{ data.email }}</td>
@@ -73,14 +81,12 @@
                 nzErrorTip="Please input your First Name!"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="user">
-                  <input
-                    type="text"
-                    nz-input
-                    formControlName="first_name"
-                    placeholder="First Name"
-                  />
-                </nz-input-group>
+                <input
+                  type="text"
+                  nz-input
+                  formControlName="first_name"
+                  placeholder="First Name"
+                />
               </nz-form-control>
             </nz-form-item>
 
@@ -90,14 +96,12 @@
                 nzErrorTip="Please input your Last Name"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="user">
-                  <input
-                    type="text"
-                    nz-input
-                    formControlName="last_name"
-                    placeholder="Last Name"
-                  />
-                </nz-input-group>
+                <input
+                  type="text"
+                  nz-input
+                  formControlName="last_name"
+                  placeholder="Last Name"
+                />
               </nz-form-control>
             </nz-form-item>
 
@@ -107,14 +111,12 @@
                 nzErrorTip="Please input your Email!"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="mail">
-                  <input
-                    type="text"
-                    nz-input
-                    formControlName="email"
-                    placeholder="Email"
-                  />
-                </nz-input-group>
+                <input
+                  type="text"
+                  nz-input
+                  formControlName="email"
+                  placeholder="Email"
+                />
               </nz-form-control>
             </nz-form-item>
 
@@ -124,14 +126,12 @@
                 nzErrorTip="Please input your username"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="mail">
-                  <input
-                    type="text"
-                    nz-input
-                    formControlName="user_name"
-                    placeholder="User name"
-                  />
-                </nz-input-group>
+                <input
+                  type="text"
+                  nz-input
+                  formControlName="user_name"
+                  placeholder="User name"
+                />
               </nz-form-control>
             </nz-form-item>
 
@@ -141,31 +141,34 @@
                 nzErrorTip="Please input your Password!"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="lock">
-                  <input
-                    type="password"
-                    nz-input
-                    formControlName="password_md5"
-                    placeholder="Password"
-                  />
-                </nz-input-group>
+                <input
+                  type="password"
+                  nz-input
+                  formControlName="password_md5"
+                  placeholder="Password"
+                />
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
-                    <nz-form-label>Confirm Password</nz-form-label>
-                    <nz-form-control [nzErrorTip]="errorTpl" class="create">
-                        <nz-input-group nzPrefixIcon="lock">
-                          <input type="password" nz-input formControlName="cnfrm_password_md5" placeholder="Re-enter Password" />
-                          <ng-template #errorTpl let-control>
-                            <ng-container *ngIf="control.hasError('required')">Please confirm your password!</ng-container>
-                            <ng-container *ngIf="control.hasError('confirm')">
-                              Two passwords that you enter is inconsistent!
-                            </ng-container>
-                          </ng-template>
-                        </nz-input-group>
-                    </nz-form-control>
-                  </nz-form-item>
+              <nz-form-label>Confirm Password</nz-form-label>
+              <nz-form-control [nzErrorTip]="errorTpl" class="create">
+                <input
+                  type="password"
+                  nz-input
+                  formControlName="cnfrm_password_md5"
+                  placeholder="Re-enter Password"
+                />
+                <ng-template #errorTpl let-control>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please confirm your password!</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('confirm')">
+                    Two passwords that you enter is inconsistent!
+                  </ng-container>
+                </ng-template>
+              </nz-form-control>
+            </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Mobile Number</nz-form-label>
@@ -173,14 +176,12 @@
                 nzErrorTip="Please input your Mobile Number"
                 class="create"
               >
-                <nz-input-group nzPrefixIcon="phone">
-                  <input
-                    type="text"
-                    nz-input
-                    formControlName="phone_number"
-                    placeholder="Mobile Number"
-                  />
-                </nz-input-group>
+                <input
+                  type="text"
+                  nz-input
+                  formControlName="phone_number"
+                  placeholder="Mobile Number"
+                />
               </nz-form-control>
             </nz-form-item>
 
@@ -210,7 +211,12 @@
                 class="address"
               >
                 <nz-input-group nzPrefixIcon="home">
-                  <input type="text" nz-input formControlName="address" placeholder="Address" />
+                  <input
+                    type="text"
+                    nz-input
+                    formControlName="address"
+                    placeholder="Address"
+                  />
                 </nz-input-group>
               </nz-form-control>
             </nz-form-item>
