--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -63,7 +63,7 @@
                 <hr />
                 <div class="pl-2">
                   <div style="font-size: 14px">
-                    {{ user_data.first_name }} {{ user_data.last_name }}
+                    {{ user_data?.first_name }} {{ user_data?.last_name }}
                   </div>
                   <div>Department: <span style="font-weight: 600;">{{deptData?.department_name}}</span></div>
                   <div>Rank: <span style="font-weight: 600;">{{deptData?.ranking}}</span></div>
