--- a/Frontend/src/app/layouts/user/profile/profile.component.html
+++ b/Frontend/src/app/layouts/user/profile/profile.component.html
@@ -1,100 +1,43 @@
-<nz-header>About Me</nz-header>
+<nz-breadcrumb>
+  <nz-breadcrumb-item>Home</nz-breadcrumb-item>
+  <nz-breadcrumb-item>
+    <a routerLink="/app/modules">Dashboard</a>
+  </nz-breadcrumb-item>
+  <nz-breadcrumb-item>Change Password</nz-breadcrumb-item>
+</nz-breadcrumb>
 <nz-content class="order">
-    <h1 class="text-primary text-center">Bio Details</h1>
-
+    <h1 class="text-primary text-center">Change Password</h1>
     <div class=" box">
-           
-        
-        <form nz-form [formGroup]="validateForm" nz-row>
-            <nz-form-item nz-col nzSpan="12">
-              <nz-form-label class="lab">First Name</nz-form-label>
-                <nz-form-control nzErrorTip="Please input your First Name!" class="signup">
-                    
-                    <nz-input-group nzPrefixIcon="user">
-                        <input type="text" nz-input formControlName="first_name" placeholder="First Name"/>
-                    </nz-input-group>
-                </nz-form-control>
-            </nz-form-item>
-
-            <nz-form-item nz-col nzSpan="12">
-                 <nz-form-label>Last Name</nz-form-label>
-                <nz-form-control nzErrorTip="Please input your Last Name" class="signup"> 
-                    <nz-input-group nzPrefixIcon="user">
-                        <input type="text" nz-input formControlName="last_name" placeholder="Last Name"/>
-                    </nz-input-group>
-                </nz-form-control>
-            </nz-form-item>
-
-            <nz-form-item nz-col nzSpan="12">
-              <nz-form-label>Email</nz-form-label>
-              <nz-form-control nzErrorTip="Please input your Email!" class="signup"> 
-                  <nz-input-group nzPrefixIcon="mail">
-                      <input type="text" nz-input formControlName="email" placeholder="Email"/>
-                  </nz-input-group>
-              </nz-form-control>
-            </nz-form-item>
-            
-              <nz-form-item nz-col nzSpan="12">
-                <nz-form-label>Password</nz-form-label> 
-                <nz-form-control nzErrorTip="Please input your Password!" class="signup">
-                    <nz-input-group nzPrefixIcon="lock">
-                      <input type="password" nz-input formControlName="password" placeholder="Password" />
-                    </nz-input-group>
-                </nz-form-control>
-              </nz-form-item>
-
-              <nz-form-item nz-col nzSpan="12">
-                <nz-form-label>Mobile Number</nz-form-label> 
-                <nz-form-control nzErrorTip="Please input your Mobile Number" class="signup">
-                    <nz-input-group nzPrefixIcon="phone">
-                        <input type="text" nz-input formControlName="phone_number" placeholder="Email"/>
-                    </nz-input-group>
-                </nz-form-control>
-            </nz-form-item>
-
-              <nz-form-item nz-col nzSpan="12">
-                <nz-form-label>Department</nz-form-label> 
-                <nz-form-control class="signup">
-                  <nz-select  [(ngModel)]="dept" nzShowSearch nzAllowClear nzPlaceHolder="Select a Department" formControlName="department_id">
-                    <nz-option *ngFor="let d of departments" nzValue={{d.department_id}} nzLabel={{d.department_name}}></nz-option>
-                  </nz-select>
-                </nz-form-control>
-            </nz-form-item>
-
-            <nz-form-item nz-col nzSpan="24">
-              <nz-form-label style="margin-bottom:none;">Address</nz-form-label> 
-              <nz-form-control nzErrorTip="Please input your username!" formControlName="" class="address">
-                  <nz-input-group nzPrefixIcon="home">
-                      <input type="text" nz-input formControlName="address" placeholder="Address"/>
-                  </nz-input-group>
-              </nz-form-control>
-          </nz-form-item>
-          
-          <nz-form-item nz-col nzSpan="12">
-            <nz-form-label>City</nz-form-label> 
-            <nz-form-control class="signup">
-              <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a Department">
-                <nz-option nzValue="Option 1" nzLabel="City 1"></nz-option>
-                <nz-option nzValue="Option 2" nzLabel="City 2"></nz-option>
-              </nz-select>
-            </nz-form-control>
-        </nz-form-item>
-
-        <nz-form-item nz-col nzSpan="12">
-          <nz-form-label>District</nz-form-label> 
-          <nz-form-control class="signup">
-            <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a Department">
-              <nz-option nzValue="Option 1" nzLabel="District 1"></nz-option>
-              <nz-option nzValue="Option 2" nzLabel="District 2"></nz-option>
-            </nz-select>
+      <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+        <nz-form-item>
+          <nz-form-label class="required" [nzSpan]="7">Current Password</nz-form-label>
+          <nz-form-control [nzSpan]="12"  nzErrorTip="Please input your cureent password!">
+            <input nz-input type="password" formControlName="current_password" placeholder="Current password" />
           </nz-form-control>
-      </nz-form-item>
-
-              <div  class="login-form-margin text-center" nz-col nzSpan="24">
-                <button nz-button class="login-form-margin" [nzType]="'primary'" >Update</button>
-              </div>
-              
-        </form>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label class="required" [nzSpan]="7">New Password</nz-form-label>
+          <nz-form-control [nzSpan]="12"  nzErrorTip="Please input your new password!">
+            <input nz-input type="password" formControlName="password" placeholder="New password" (ngModelChange)="validateConfirmPassword()" />
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label class="required" [nzSpan]="7">Confirm New Password</nz-form-label>
+          <nz-form-control [nzSpan]="12" nzHasFeedback [nzErrorTip]="passwordErrorTpl">
+            <input nz-input type="password" formControlName="confirm" placeholder="confirm your new password" />
+            <ng-template #passwordErrorTpl let-control>
+              <ng-container *ngIf="control.hasError('required')">Please confirm your new password!</ng-container>
+              <ng-container *ngIf="control.hasError('confirm')">Password is inconsistent!</ng-container>
+            </ng-template>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-control [nzOffset]="7" [nzSpan]="12">
+            <button nz-button nzType="primary" [disabled]="!validateForm.valid">Submit</button>
+            <button nz-button (click)="resetForm($event)">Reset</button>
+          </nz-form-control>
+        </nz-form-item>
+      </form>
       </div>
 
 </nz-content>
